@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(Sato/matchbox/theme.xml)
+AC_INIT(Sato/matchbox/theme-vga.xml)
 AM_INIT_AUTOMAKE(matchbox-theme-sato, 0.1)
 AM_CONFIG_HEADER(config.h)
 
